柱状图1完成

--- a/css/index.css
+++ b/css/index.css
@@ -106,7 +106,10 @@ header .showTime {
 }
 .mainbox .panel .chart {
   height: 3rem;
-  background-color: pink;
+}
+@font-face {
+  font-family: electronicFont;
+  src: url(../font/DS-DIGIT.TTF);
 }
 .no {
   background-color: rgba(101, 132, 226, 0.2);
