--- a/css/index.less
+++ b/css/index.less
@@ -105,10 +105,14 @@ header{
         }
         .chart{
             height: 3rem;
-            background-color: pink;
+            // background-color: pink;
         }
     }
 }
+@font-face {
+    font-family: electronicFont;
+    src: url(../font/DS-DIGIT.TTF);
+  }
 .no{
     background-color: rgba(101, 132, 226, 0.2);
     padding: .1875rem;
