柱状图2,折线图1,2,饼状图1完成

--- a/css/index.css
+++ b/css/index.css
@@ -104,6 +104,11 @@ header .showTime {
   font-size: 0.25rem;
   font-weight: normal;
 }
+.mainbox .panel h2 a {
+  padding: 5px;
+  color: white;
+  text-decoration: none;
+}
 .mainbox .panel .chart {
   height: 3rem;
 }
