--- a/css/index.less
+++ b/css/index.less
@@ -102,6 +102,11 @@ header{
             text-align: center;
             font-size: .25rem;
             font-weight: normal;
+            a{
+                padding: 5px;
+                color: white;
+                text-decoration: none;
+            }
         }
         .chart{
             height: 3rem;
